--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,6 +3,7 @@
     package="red.padraig.twotapp">
 
     <uses-permission android:name="android.permission.CAMERA" />
+    <uses-permission android:name="android.permission.WAKE_LOCK" />
 
     <uses-feature android:name="android.hardware.camera" />
     <uses-feature android:name="android.hardware.screen.portrait" />
@@ -14,6 +15,9 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
+        <receiver
+            android:name=".alarm.AlarmBroadcastReceiver" />
+
         <activity
             android:name=".ui.activities.MainActivity"
             android:screenOrientation="portrait"
@@ -27,6 +31,7 @@
         <activity
             android:name=".ui.activities.TimerCompleteActivity"
             android:screenOrientation="portrait"
+            android:showOnLockScreen="true"
             android:theme="@style/AppTheme">
             <intent-filter>
                 <category android:name="android.intent.category.LAUNCHER" />
