--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,11 +15,11 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <receiver
-            android:name=".alarm.AlarmBroadcastReceiver" />
+        <receiver android:name=".alarm.AlarmBroadcastReceiver" />
 
         <activity
             android:name=".ui.activities.MainActivity"
+            android:launchMode="singleInstance"
             android:screenOrientation="portrait"
             android:theme="@style/AppTheme">
             <intent-filter>
@@ -30,6 +30,7 @@
         </activity>
         <activity
             android:name=".ui.activities.TimerCompleteActivity"
+            android:launchMode="singleInstance"
             android:screenOrientation="portrait"
             android:showOnLockScreen="true"
             android:theme="@style/AppTheme">
